@@ -10,10 +10,16 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 
 
 2016-05-03 niel
-	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
+	Fix: Force li3 connections to ignore Host/Port settings if a socket is provided.
 2016-05-02 bart39
 	Mrg: PR 2127, from rainje - New release name format not matched with reqid
 	Chg: update schema and replace triggers for above PR.
+2016-04-30
+	Mrg: dev => Latest-testing to prepare for updating stable 0.x.
+
+
+2016-05-03 niel
+	Mrg: Add 'composer install' instruction to ReleaseNotes (PR 2128).
 2016-04-28 niel
 	Fix: Code style foramtting.
 	Fix: Removing pre-install-cmd from composer.json again. It kills the install for new users.
